[tool.poetry]
name = "ruletune"
version = "0.1.0"
description = "Discovery of Associative Rules in Massive Datasets of Market Transactions."
authors = ["Helder Matos <mtshelder@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "2.2.1"
numpy = "1.26.4"
matplotlib = "3.8.3"
seaborn = "0.13.2"
mlxtend = "0.22.0"
scikit-learn = "1.3.0"
scipy = "1.12.0"
pyarrow = "15.0.0"
openpyxl = "3.1.2"
tqdm = "4.66.2"
kaleido = "0.2.1"
psutil = "6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
